[package]
name = "betty"
version = "0.1.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "An alternative to git-lfs"
keywords = ["git", "lfs"]
license = "MIT"
homepage = "https://github.com/aslilac/betty"
repository = "https://github.com/aslilac/betty"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.12", features = ["stream"] }
toml = "0.5.9"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
once_cell = "1.16.0"
anyhow = "1.0.66"
