[package]
name = "betty"
version = "0.1.1"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "An alternative to git-lfs"
keywords = ["git", "lfs"]
license = "MIT"
homepage = "https://github.com/aslilac/betty"
repository = "https://github.com/aslilac/betty"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
reqwest = { version = "0.11.12", features = ["stream"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
